Added responsiveness to the header

--- a/about.html
+++ b/about.html
@@ -35,6 +35,9 @@
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
+
+                    <a class="hamburger">☰</a>
+
       </div>
     </header>
 
