--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+
+
+            
+            <a class="hamburger">☰</a>
+
+
+
         </div>
     </header>
 
