--- a/contact.html
+++ b/contact.html
@@ -29,6 +29,9 @@
                     <li><a href="contact.html" class="active">Contact</a></li>
                 </ul>
             </nav>
+
+                        <a class="hamburger">☰</a>
+
         </div>
     </header>
 
