--- a/s.html
+++ b/s.html
@@ -2,51 +2,62 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Background Image Slideshow</title>
+  <title>Hamburger Button</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #111;
+    /* Container for the menu */
+    .menu-container {
+      position: relative;
+      width: 40px;
+      height: 30px;
     }
 
-    .slideshow {
-      width: 80vw;
-      height: 60vh;
-      background-image: url('https://picsum.photos/id/1015/800/500');
-      background-size: cover;
-      background-position: center;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0,0,0,0.5);
-      transition: background-image 1s ease-in-out;
+    /* Hide the checkbox */
+    .menu-toggle {
+      display: none;
+    }
+
+    /* Style the lines */
+    .menu-btn {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+    }
+
+    .menu-btn span {
+      height: 4px;
+      width: 100%;
+      background: #333;
+      border-radius: 2px;
+      transition: 0.3s ease;
+    }
+
+    /* Transform into X when checked */
+    .menu-toggle:checked + .menu-btn span:nth-child(1) {
+      transform: rotate(45deg) translateY(10px);
+    }
+
+    .menu-toggle:checked + .menu-btn span:nth-child(2) {
+      opacity: 0;
+    }
+
+    .menu-toggle:checked + .menu-btn span:nth-child(3) {
+      transform: rotate(-45deg) translateY(-10px);
     }
   </style>
 </head>
 <body>
 
-  <div class="slideshow"></div>
-
-  <script>
-    const slideshowDiv = document.querySelector('.slideshow');
-
-    const images = [
-      'https://picsum.photos/id/1015/800/500',
-      'https://picsum.photos/id/1016/800/500',
-      'https://picsum.photos/id/1018/800/500',
-      'https://picsum.photos/id/1020/800/500'
-    ];
-
-    let index = 0;
-
-    setInterval(() => {
-      index = (index + 1) % images.length;
-      slideshowDiv.style.backgroundImage = `url('${images[index]}')`;
-    }, 3000); // Change every 3 seconds
-  </script>
+  <div class="menu-container">
+    <input type="checkbox" id="menu-toggle" class="menu-toggle">
+    <label for="menu-toggle" class="menu-btn">
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+  </div>
 
 </body>
 </html>
