Added form validation through javascript

--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,9 @@
 
 
 <script src="script.js"></script>
-<script> 
+<script src="formvalidation.js"></script>
+
+<!-- <script> 
       document.getElementById('contactForm').addEventListener('submit', function(event) {
         event.preventDefault(); 
 
@@ -152,7 +154,7 @@
         }, 5000);
     });
 
-</script>
+</script> -->
 </body>
 
 
