--- a/contact.html
+++ b/contact.html
@@ -50,21 +50,21 @@
                 <form id="contactForm">
                     <div class="form-group">
                         <label for="name">Name</label>
-                        <input type="text" id="name" name="name"   required>
+                        <input type="text" id="name" name="name"   >
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" name="email"  required>
+                        <input type="email" id="email" name="email"  >
                     </div>
 
                     <div class="form-group">
                         <label for="subject">Subject</label>
-                        <input type="text" id="subject" name="subject"  required>
+                        <input type="text" id="subject" name="subject"  >
                     </div>
 
                     <div class="form-group">
                         <label for="message">Message</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
+                        <textarea id="message" name="message" rows="5" ></textarea>
                         <p id="formmsg" style="display: none; color: green; font-size: 2rem;"></p>
                     </div>
                     <button type="submit" class="submit-btn" >Send Message</button>
