Added a hamburger menu

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
                 </ul>
             </nav>
 
-                        <a class="hamburger">☰</a>
+                        <a class="hamburger"></a>
 
         </div>
     </header>
@@ -135,6 +135,8 @@
 
 <script src="script.js"></script>
 <script src="formvalidation.js"></script>
+  <script src="hammenu.js"></script>
+
 
 
 </body>
