--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
           </ul>
         </nav>
 
-                    <a class="hamburger">☰</a>
+                    <a class="hamburger"></a>
 
       </div>
     </header>
@@ -161,5 +161,7 @@
     </footer>
 
     <script src="script.js"></script>
+      <script src="hammenu.js"></script>
+
   </body>
 </html>
