--- a/courses.html
+++ b/courses.html
@@ -36,7 +36,7 @@
           </ul>
         </nav>
 
-                    <a class="hamburger">☰</a>
+                    <a class="hamburger"></a>
 
       </div>
     </header>
@@ -325,6 +325,8 @@
     </footer>
     <script src="script.js"></script>
     <script src="filter.js"></script>
+      <script src="hammenu.js"></script>
+
     <script>
       function enrollAlert() {
         confirm("Thank you for choosing SkillNest! We'll contact you soon.");
