--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </ul>
         </nav>
 
-        <a class="hamburger">☰</a>
+        <a class="hamburger"></a>
       </div>
     </header>
 
@@ -172,6 +172,7 @@
     </footer>
   </body>
   <script src="script.js"></script>
+  <script src="hammenu.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
