Added few changes for code readability

--- a/courses.html
+++ b/courses.html
@@ -7,12 +7,8 @@
     <link rel="stylesheet" href="/stylesheets/styles.css" />
     <link rel="stylesheet" href="/stylesheets/courses.css" />
     <link rel="icon" href="/images/logo-main.jpg" type="image/x-icon" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
   </head>
-
   <body>
     <header>
       <div class="container">
@@ -56,6 +52,15 @@
       </div>
     </section>
 
+
+
+
+
+
+
+
+
+
     <section class="course-categories">
       <div class="container">
         <div class="category-filter">
@@ -66,6 +71,13 @@
         </div>
       </div>
     </section>
+
+
+
+
+
+
+
 
     <section class="courses-list">
       <div class="container">
@@ -261,6 +273,11 @@
       </div>
     </section>
 
+
+
+
+
+
     <footer>
       <div class="footer-container">
         <div class="footer-section">
@@ -323,14 +340,29 @@
         <p>&copy; 2023 SkillNest. All rights reserved.</p>
       </div>
     </footer>
-    <script src="script.js"></script>
-    <script src="filter.js"></script>
-      <script src="hammenu.js"></script>
+
+
+
+
+
+
+
+
+    <script src="/scripts/script.js"></script>
+    <script src="/scripts/filter.js"></script>
+     <script src="/scripts/hammenu.js"></script>
+
+
+
+
 
     <script>
       function enrollAlert() {
         confirm("Thank you for choosing SkillNest! We'll contact you soon.");
       }
     </script>
+
+
+
   </body>
 </html>
