--- a/about.html
+++ b/about.html
@@ -50,6 +50,15 @@
       </div>
     </section>
 
+
+
+
+
+
+
+
+
+
     <section class="about-content">
       <div class="container">
         <div class="about-text">
@@ -78,6 +87,13 @@
           </p>
         </div>
 
+
+
+
+
+
+
+
         <div class="stats">
           <div class="stat-item">
             <h4 id="typing">15,000+</h4>
@@ -97,6 +113,12 @@
 
     <footer>
       <div class="footer-container">
+
+
+
+
+
+        
         <div class="footer-section">
           <h3>SkillNest</h3>
           <p>
@@ -111,6 +133,11 @@
           </div>
         </div>
 
+
+
+
+
+
         <div class="footer-section">
           <h4>Quick Links</h4>
           <ul>
@@ -121,6 +148,10 @@
             <li><a href="blog.html">Blog</a></li>
           </ul>
         </div>
+
+
+
+
 
         <div class="footer-section">
           <h4>Contact Info</h4>
@@ -137,6 +168,10 @@
           </ul>
         </div>
 
+
+
+
+
         <div class="footer-section">
           <h4>Legal</h4>
           <ul>
@@ -147,6 +182,11 @@
           </ul>
         </div>
       </div>
+
+
+
+
+
 
       <div class="footer-bottom">
         <h3 class="payment-heading">Accepted Payment Methods</h3>
@@ -160,8 +200,8 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
-      <script src="hammenu.js"></script>
+    <script src="/scripts/script.js"></script>
+      <script src="/scripts/hammenu.js"></script>
 
   </body>
 </html>
