--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="/stylesheets/styles.css" />
     <link rel="stylesheet" href=" /stylesheets/home.css" />
 
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    />
+    <script src="/scripts//scriptshttps://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
     <link rel="icon" href="/images/logo-main.jpg" type="image/x-icon" />
 
     <style></style>
@@ -31,6 +28,11 @@
           <h1 class="logo">SkillNest</h1>
         </div>
 
+
+
+
+
+
         <nav>
           <ul>
             <li><a href="index.html" class="active">Home</a></li>
@@ -40,9 +42,16 @@
           </ul>
         </nav>
 
+
         <a class="hamburger"></a>
       </div>
     </header>
+
+
+
+
+
+
 
     <section class="hero">
       <div id="hero_heading">
@@ -57,6 +66,12 @@
         <a href="courses.html" class="btn">Browse Courses</a>
       </div>
     </section>
+
+
+
+
+
+
 
     <section class="features">
       <div class="container">
@@ -80,6 +95,10 @@
         </div>
       </div>
     </section>
+
+
+
+
 
     <section class="testimonials">
       <div class="container">
@@ -107,6 +126,11 @@
         </div>
       </div>
     </section>
+
+
+
+
+
 
     <footer>
       <div class="footer-container" id="finfo">
@@ -170,9 +194,21 @@
         <p>&copy; 2023 SkillNest. All rights reserved.</p>
       </div>
     </footer>
+
+
+
+
+
+
+
   </body>
-  <script src="script.js"></script>
-  <script src="hammenu.js"></script>
+
+
+
+
+
+  <script src="/scripts/script.js"></script>
+  <script src="/scripts/hammenu.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
@@ -190,4 +226,7 @@
       showCursor: true,
     });
   </script>
+
+
+
 </html>
